feat(core): 增强动态编译工具支持 Spring Boot jar环境
- 新增功能：解压 jar 中引用的库到临时文件目录的 tempCompilerDir
- 优化 classpath 加载逻辑，支持从 jar 文件中提取依赖
- 更新 README 文档，添加动态编译工具的使用说明和示例
- 修复了一些与类加载相关的问题，提高了编译成功率